# TandemLaunch_Scouting_DB

./: pyproject.toml  server_start_instructions.md
.github/workflows/: publish_pypi.yml
client/: __init__.py  api.py  main.py
server/: database.py  external_lookup.py  main.py  models.py  ror_loader.py
