[project]
name = "scouting-database"
version = "0.1.0"
description = "Scouting Database for TandemLaunch's Active Recruitment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "pyqt6>=6.9.0",
    "requests>=2.32.3",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "uvicorn>=0.34.2",
]
